--- a/arp_nutzungsplanung_import/build.gradle
+++ b/arp_nutzungsplanung_import/build.gradle
@@ -20,6 +20,7 @@ task importXtfFile(type: Ili2pgReplace, dependsOn: 'copyXtfFile') {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     dbschema = 'arp_nutzungsplanung_import_v1'
     models = 'SO_Nutzungsplanung_20171118'
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
     deleteData= true
     dataset = ili2pgDataset
     dataFile = "upload/${ili2pgDataset}.xtf"
@@ -40,6 +41,7 @@ task deleteData_import(type: Ili2pgDelete) {
     description = "Löscht/leert Daten mit dem angegebenen Datasetname (BFS-Nr.) aus dem Schema arp_nutzungsplanung_import_v1"
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     models = 'SO_ARP_Nutzungsplanung_Nachfuehrung_20201005'
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
     dbschema = 'arp_nutzungsplanung_import_v1'
     dataset = ili2pgDataset
 }
@@ -56,6 +58,7 @@ task exportData_Dataset_BFSNr(type: Ili2pgExport) {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     dbschema = 'arp_nutzungsplanung_transfer_v1'
     models = 'SO_ARP_Nutzungsplanung_Nachfuehrung_20201005'
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
     dataset = ili2pgDataset
     dataFile= file(ili2pgDataset + ".xtf")
     disableValidation = true
@@ -64,6 +67,7 @@ task exportData_Dataset_BFSNr(type: Ili2pgExport) {
 task validateData_Dataset_BFSNr(type: IliValidator, dependsOn: 'exportData_Dataset_BFSNr') {
     description = "Validiert die exportierten INTERLIS-Datei gegen das Modell."
     dataFiles = file(ili2pgDataset + ".xtf")
+    if (findProperty('ilivalidatorModeldir')) modeldir = ilivalidatorModeldir
     allObjectsAccessible = true
     failOnError = false
 }
@@ -77,6 +81,7 @@ task importData_Dataset_BFSNr(type: Ili2pgImport) {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     dbschema = 'arp_nutzungsplanung_v1'
     models = 'SO_ARP_Nutzungsplanung_Nachfuehrung_20201005'
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
     dataset = ili2pgDataset
     dataFile = file(ili2pgDataset + ".xtf")
     disableValidation = true
@@ -88,6 +93,7 @@ task exportData_Dataset_Kanton(type: Ili2pgExport) {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     dbschema = 'arp_nutzungsplanung_transfer_v1'
     models = 'SO_ARP_Nutzungsplanung_Nachfuehrung_20201005'
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
     dataset = 'Kanton'
     dataFile = file(ili2pgDataset + "_Kanton.xtf")
     disableValidation = true
@@ -96,6 +102,7 @@ task exportData_Dataset_Kanton(type: Ili2pgExport) {
 task validateData_Dataset_Kanton(type: IliValidator, dependsOn: 'exportData_Dataset_Kanton') {
     description = "Validiert die exportierten INTERLIS-Datei gegen das Modell."
     dataFiles = file(ili2pgDataset + "_Kanton.xtf")
+    if (findProperty('ilivalidatorModeldir')) modeldir = ilivalidatorModeldir
     allObjectsAccessible = true
     failOnError = false
 }
@@ -109,6 +116,7 @@ task importData_Dataset_Kanton(type: Ili2pgImport) {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     dbschema = 'arp_nutzungsplanung_kanton_v1'
     models = 'SO_ARP_Nutzungsplanung_Nachfuehrung_20201005'
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
     dataFile = file(ili2pgDataset + "_Kanton.xtf")
     disableValidation = true
     finalizedBy deleteXtfFile_Kanton
