--- a/arp_wildruhezonen_export_ai/build.gradle
+++ b/arp_wildruhezonen_export_ai/build.gradle
@@ -20,6 +20,7 @@ Package and upload to the KKGEO AI
 task exportMgdmWildruhezonen(type: Ili2pgExport) {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     models = "Wildruhezonen_LV95_V2_1"
+    if (findProperty('ili2dbModeldir')) modeldir = ili2dbModeldir
     dbschema = "arp_wildruhezonen_mgdm_v1"
     dataFile = file(xtfFileName)
     disableValidation = true
@@ -27,6 +28,7 @@ task exportMgdmWildruhezonen(type: Ili2pgExport) {
 
 task validateMgdmWildruhezonen(type: IliValidator, dependsOn: 'exportMgdmWildruhezonen') {
     dataFiles = [file(xtfFileName)]
+    if (findProperty('ilivalidatorModeldir')) modeldir = ilivalidatorModeldir
     logFile = "ilivalidator.log"
     failOnError = true
 }
